--- a/sevchat-app/sevchat-app/Info.plist
+++ b/sevchat-app/sevchat-app/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIImageName</key>
+		<string>ChatIS</string>
+	</dict>
 	<key>BASE_URL</key>
 	<string>$BASE_URL</string>
 </dict>
